fix: image cut off from the right

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -69,8 +69,8 @@
 }
 
 .thumbnail {
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     border: 8px solid transparent;
     cursor: pointer;
